# Halcyon

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  mkdocs.yml
.github/actions/setup-db2-clidriver/: action.yml
.github/workflows/: ci.yml
cmake/: FindDB2CLI.cmake  HalcyonConfig.cmake.in  HalcyonCoroutineSupport.cmake  check_db2_cli_include_isolation.cmake  run_fetchcontent_test.cmake  run_smoke_test.cmake  version.hpp.in
docker/: README.md  docker-compose.yml  wait-for-db2-ready.sh
docs/: README.md  RELEASING.md  build.sh  index.md
docs/guide/: advanced.md  async.md  batch-operations.md  connection-pool.md  coroutines.md  error-handling.md  getting-started.md  index.md  lobs.md  observability.md  parameters-and-types.md  querying.md  transactions.md
docs/superpowers/plans/: 2026-06-17-halcyon-foundation.md  2026-06-18-halcyon-core-data-path.md  2026-06-19-halcyon-facade-ergonomics.md  2026-06-19-halcyon-pool-concurrency.md  2026-06-21-halcyon-review-remediation.md  2026-06-21-halcyon-stmt-cache.md  2026-06-21-halcyon-stress-test.md  2026-06-22-halcyon-orders-sample.md  2026-06-24-halcyon-otel-context-propagation.md  2026-06-26-halcyon-array-binding-and-release-readiness.md  2026-06-28-halcyon-rowset-fetch.md  2026-07-01-halcyon-v1-release-readiness.md  2026-07-05-public-legitimacy-remediation.md  2026-07-12-halcyon-v1.1-transactions-large-data.md  2026-07-16-halcyon-v1.2-coroutines-async-streaming.md
docs/superpowers/specs/: 2026-06-17-halcyon-db2-cpp-design.md  2026-06-21-halcyon-stmt-cache-design.md  2026-06-21-halcyon-stress-test-design.md  2026-06-22-halcyon-orders-sample-design.md  2026-06-24-halcyon-otel-context-propagation-design.md  2026-06-26-halcyon-array-binding-design.md  2026-06-28-halcyon-rowset-fetch-design.md  2026-07-01-halcyon-v1-release-readiness-design.md  2026-07-12-halcyon-v1.1-transactions-large-data-design.md  2026-07-16-halcyon-v1.2-coroutines-async-streaming-design.md
examples/: CMakeLists.txt  coro_orders.cpp  functional_usage.cpp  oo_usage.cpp
include/halcyon/: async.hpp  connection.hpp  coro.hpp  database.hpp  error.hpp  halcyon.hpp  isolation.hpp  lob.hpp  parameters.hpp  pool.hpp  result.hpp  retry.hpp  streaming.hpp  transaction.hpp  types.hpp  version.hpp
include/halcyon/coro/: ops.hpp  streaming.hpp  task.hpp
include/halcyon/coro/detail/: offload.hpp  require_coroutines.hpp
include/halcyon/detail/: batch_validate.hpp  statement_cache.hpp
include/halcyon/detail/cli/: db2_cli_driver.hpp  driver.hpp  sqlstate.hpp
include/halcyon/observability/: config.hpp  instrument.hpp  logging.hpp  metrics.hpp  otel_adapter.hpp  prometheus_adapter.hpp  tracing.hpp
samples/orders/: CMakeLists.txt  README.md  load_sql.sh
samples/orders/sql/: schema.sql  seed.sql
samples/orders/src/: orders_functional.cpp  orders_model.hpp  orders_oo.cpp
src/core/: error.cpp  version.cpp
src/detail/cli/: db2_cli_driver.cpp  sqlstate.cpp
src/observability/: otel_adapter.cpp  prometheus_adapter.cpp  stderr_logger.cpp
tests/: CMakeLists.txt
tests/consumer-fetchcontent/: CMakeLists.txt  main.cpp
tests/integration/: CMakeLists.txt  test_db2_coro.cpp  test_db2_lobs.cpp  test_db2_roundtrip.cpp  test_db2_savepoints_isolation.cpp
tests/smoke/: CMakeLists.txt  main.cpp
tests/stress/: CMakeLists.txt  README.md
tests/stress/correctness/: test_stress_concurrency.cpp  test_stress_coro.cpp  test_stress_savepoints.cpp
tests/stress/perf/: batch_insert_bench.cpp  halcyon_stress_main.cpp  select_bench.cpp
tests/stress/support/: concurrent_fake_driver.hpp  latency_histogram.hpp  workload_runner.cpp  workload_runner.hpp  workloads.hpp
tests/unit/: capturing_logger.hpp  mock_cli_driver.hpp  test_async.cpp  test_cli_seam.cpp  test_connection.cpp  test_coro_ops.cpp  test_coro_streaming.cpp  test_coro_task.cpp  test_coro_transaction.cpp  test_database.cpp  test_database_async.cpp  test_database_batch.cpp  test_database_retry.cpp  test_error.cpp  test_lob.cpp  test_lob_write.cpp  test_logging.cpp  test_observability.cpp  test_otel_propagation.cpp  test_parameters.cpp  test_pool.cpp  test_pool_maintenance.cpp  test_pool_stats.cpp  test_reflect.cpp  test_result.cpp  test_result_set.cpp  test_retry.cpp  test_savepoint.cpp  test_sqlstate.cpp  test_statement_cache.cpp  test_streaming.cpp  test_transaction.cpp  test_type_binder.cpp  test_version.cpp
